# binexplorer

./: Cargo.toml  README.md
examples/: raw_view.rs  rawbinoutput.rs
src/: main.rs  parser.pest  parsing.rs  presentation.rs
