[package]
name = "binexplorer"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
tui = { version = "0.10" }
crossterm = "0.15.0"
structopt = "0.3.9"
anyhow = "1.0.26"
log4rs = "0.10.0"
log = "0.4.8"
pest = "2.1.2"
pest_derive = "2.1.0"
termion = "1.5.5"
